WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110738
[BlackBerry][ARM] Fix cast-align warnings in JavaScriptCore
https://bugs.webkit.org/show_bug.cgi?id=110738
Summary
[BlackBerry][ARM] Fix cast-align warnings in JavaScriptCore
Carlos Garcia Campos
Reported
2013-02-25 01:53:42 PST
There are a lot of warnings like this one when building JavaScriptCore in ARM. Source/JavaScriptCore/runtime/ArrayStorage.h:52:103: warning: cast from 'JSC::Butterfly*' to 'JSC::ArrayStorage*' increases required alignment of target type [-Wcast-align]
Attachments
Patch
(7.31 KB, patch)
2013-02-25 01:56 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Updated patch
(9.89 KB, patch)
2013-02-25 02:09 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-02-25 01:56:00 PST
Created
attachment 190019
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-02-25 02:09:17 PST
Created
attachment 190020
[details]
Updated patch I had missed a few more cases in previous patch.
Rob Buis
Comment 3
2013-02-25 04:26:27 PST
Comment on
attachment 190020
[details]
Updated patch Looks good.
WebKit Review Bot
Comment 4
2013-02-25 05:15:33 PST
Comment on
attachment 190020
[details]
Updated patch Clearing flags on attachment: 190020 Committed
r143909
: <
http://trac.webkit.org/changeset/143909
>
WebKit Review Bot
Comment 5
2013-02-25 05:15:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug