Source/JavaScriptCore/runtime/IndexingHeader.h
@@ -86,12 +86,12 @@ public:
     
     PropertyStorage propertyStorage()
     {
-        return reinterpret_cast<PropertyStorage>(this);
+        return reinterpret_cast_ptr<PropertyStorage>(this);
     }
     
     ConstPropertyStorage propertyStorage() const
     {
-        return reinterpret_cast<ConstPropertyStorage>(this);
+        return reinterpret_cast_ptr<ConstPropertyStorage>(this);
     }
     
     ArrayStorage* arrayStorage()
